--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_widget_from_html: ^0.9.1
   flutter_launcher_icons: ^0.14.1
 
+  get_storage: ^2.1.1
+  easy_localization: ^3.0.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,7 +68,6 @@ flutter_native_splash:
   image: assets/images/final  ZRJ.png
 
 flutter:
-
   uses-material-design: true
 
   assets:
