--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   shared_preferences: any
   animated_page_transition: ^0.0.1+2
   country_code_picker: ^3.0.0
-  flutter_staggered_grid_view: ^0.4.0
+  flutter_staggered_grid_view: ^0.7.0
+  carousel_slider: ^5.0.0
 #  myfatoorah_flutter: ^3.1.4
   cached_network_image: ^3.4.1
   intl: ^0.19.0
