--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   circular_countdown_timer: any
   change_app_package_name: ^1.4.0
+  flutter_stripe: ^11.2.0
 #  firebase_core: ^3.6.0
 #  flutter_local_notifications: ^17.2.4
 #  firebase_messaging: ^15.1.3
