--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   flutter_widget_from_html: ^0.9.1
   flutter_launcher_icons: ^0.14.1
-
+  jwt_decoder: ^2.0.1
   get_storage: ^2.1.1
   easy_localization: ^3.0.7
 
